--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ license = "Apache-2.0/MIT"
 
 [dependencies]
 app = "0.6.5"
+libc = "0.2.139"
 # XXX tempfile is only required for the test helper binary, but there's not way
 # (yet) to only compile the binary if building with tests enabled.
 tempfile = "3.3.0"
 
 [dev-dependencies]
 lang_tester = "0.7.1"
+rand = "0.8.5"
 
 [[test]]
 name = "lang_tests"
